src/tests/routes/trustpub/github_configs/snapshots/integration__routes__trustpub__github_configs__create__happy_path-3.snap
---
source: src/tests/routes/trustpub/github_configs/create.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Trusted Publishing configuration added to foo
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

You added a new "Trusted Publishing" configuration for GitHub Actions to your crate "foo". Trusted publishers act as trusted users and can publish new versions of the crate automatically.

This configuration allows the workflow file at https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml to publish new versions of this crate.

If you did not make this change and you think it was made maliciously, you can remove the configuration from the crate via the "Settings" tab on the crate's page.

If you are unable to revert the change and need to do so, you can email help@crates.io for assistance.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>You added a new "Trusted Publishing" configuration for GitHub Actions to your crate "<strong>foo</strong>". Trusted publishers act as trusted users and can publish new versions of the crate automatically.</p>

<p>This configuration allows the workflow file at <a href="https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml">https://github.com/rust-lang/foo-rs/blob/HEAD/.github/workflows/publish.yml</a> to publish new versions of this crate.</p>

<p>If you did not make this change and you think it was made maliciously, you can remove the configuration from the crate via the "Settings" tab on the crate's page.</p>

<p>If you are unable to revert the change and need to do so, you can email <a href="mailto:help@crates.io">help@crates.io</a> for assistance.</p>

<p>--<br>The crates.io Team</p>
--[boundary]--
