src/tests/routes/trustpub/github_configs/snapshots/integration__routes__trustpub__github_configs__create__happy_path_with_environment-2.snap
---
source: src/tests/routes/trustpub/github_configs/create.rs
expression: response.json()
---
{
  "github_config": {
    "crate": "foo",
    "created_at": "[datetime]",
    "environment": "production",
    "id": 1,
    "repository_name": "foo-rs",
    "repository_owner": "rust-lang",
    "repository_owner_id": 42,
    "workflow_filename": "publish.yml"
  }
}
