src/tests/routes/trustpub/github_configs/snapshots/integration__routes__trustpub__github_configs__create__token_auth_with_wildcard_crate_scope-2.snap
---
source: src/tests/routes/trustpub/github_configs/create.rs
expression: response.json()
---
{
  "github_config": {
    "crate": "foo",
    "created_at": "[datetime]",
    "environment": null,
    "id": 1,
    "repository_name": "foo-rs",
    "repository_owner": "rust-lang",
    "repository_owner_id": 42,
    "workflow_filename": "publish.yml"
  }
}
